@@ -1380,7 +1380,11 @@ CREATE DATABASE,ALTER DATABASE,DROP DATABASE</pre>
 
     <dt id="cfg_MaxDbList">$cfg['MaxDbList'] integer</dt>
     <dd>The maximum number of database names to be displayed in the
-        navigation frame and the database list.</dd>
+        database list.</dd>
+
+    <dt id="cfg_MaxNavigationItems">$cfg['MaxNavigationItems'] integer</dt>
+    <dd>The number of items that can be displayed on each page
+        of the navigation tree.</dd>
 
     <dt id="cfg_MaxTableList">$cfg['MaxTableList'] integer</dt>
     <dd>The maximum number of table names to be displayed in the
