@@ -305,8 +305,10 @@ $strConfigLongtextDoubleTextarea_name = __('Bigger textarea for LONGTEXT');
 $strConfigMaxCharactersInDisplayedSQL_desc = __('Maximum number of characters used when a SQL query is displayed');
 $strConfigMaxCharactersInDisplayedSQL_name = __('Maximum displayed SQL length');
 $strConfigMaxDbList_cmt = __('Users cannot set a higher value');
-$strConfigMaxDbList_desc = __('Maximum number of databases displayed in left frame and database list');
+$strConfigMaxDbList_desc = __('Maximum number of databases displayed in database list');
 $strConfigMaxDbList_name = __('Maximum databases');
+$strConfigMaxNavigationItems_desc = __('The number of items that can be displayed on each page of the navigation tree');
+$strConfigMaxNavigationItems_name = __('Maximum items in branch');
 $strConfigMaxRows_desc = __('Number of rows displayed when browsing a result set. If the result set contains more rows, &quot;Previous&quot; and &quot;Next&quot; links will be shown.');
 $strConfigMaxRows_name = __('Maximum number of rows to display');
 $strConfigMaxTableList_cmt = __('Users cannot set a higher value');
