@@ -82,7 +82,8 @@ $forms['Left_frame']['Left_frame'] = array(
     'LeftLogoLink',
     'LeftLogoLinkWindow',
     'LeftPointerEnable',
-    'LeftRecentTable');
+    'LeftRecentTable',
+    'MaxNavigationItems');
 $forms['Left_frame']['Left_databases'] = array(
     'LeftDisplayDatabaseFilterMinimum',
     'LeftFrameDBTree',
