@@ -54,6 +54,7 @@ VerboseMultiSubmit, ReplaceHelpImg
 + Dropped configuration directive: DisplayDatabasesList
 + Dropped configuration directives: ShowTooltipAliasDB and ShowTooltipAliasTB
 + Dropped configuration directive: NaviDatabaseNameColor
++ Added configuration directive: MaxNavigationItems
 
 3.5.4.0 (not yet released)
 - bug #3570212 [edit] uuid_short() is a no-arguments function
